@@ -3,10 +3,10 @@
  * This Source Code Form is subject to the terms of the Mozilla Public
  * License, v. 2.0. If a copy of the MPL was not distributed with this
  * file, You can obtain one at http://mozilla.org/MPL/2.0/.
+ * SPDX-License-Identifier: MPL-2.0
  */
 package com.powsybl.cim;
 
-import com.google.common.collect.ImmutableSet;
 import com.powsybl.commons.PowsyblException;
 import com.powsybl.commons.exceptions.UncheckedXmlStreamException;
 import com.powsybl.commons.util.StringAnonymizer;
@@ -51,9 +51,9 @@ public class CimAnonymizer {
         }
     }
 
-    private static final Set<String> NAMES_TO_EXCLUDE = ImmutableSet.of("PATL", "TATL");
+    private static final Set<String> NAMES_TO_EXCLUDE = Set.of("PATL", "TATL");
 
-    private static final Set<String> DESCRIPTIONS_TO_EXCLUDE = ImmutableSet.of();
+    private static final Set<String> DESCRIPTIONS_TO_EXCLUDE = Set.of();
 
     private static final String RDF_URI = "http://www.w3.org/1999/02/22-rdf-syntax-ns#";
 
@@ -63,7 +63,7 @@ public class CimAnonymizer {
     private static final QName RDF_RESOURCE = new QName(RDF_URI, "resource");
     private static final QName RDF_ABOUT = new QName(RDF_URI, "about");
 
-    private static class XmlStaxContext {
+    private static final class XmlStaxContext {
         private final XMLInputFactory inputFactory = XMLInputFactory.newFactory();
         private final XMLOutputFactory outputFactory = XMLOutputFactory.newFactory();
         private final XMLEventFactory eventFactory = XMLEventFactory.newInstance();
@@ -292,7 +292,9 @@ public class CimAnonymizer {
         StringAnonymizer dictionary = loadDic(dictionaryFile);
 
         // anonymize each file of the archive
-        try (ZipFile zipFileData = new ZipFile(Files.newByteChannel(cimZipFile))) {
+        try (ZipFile zipFileData = ZipFile.builder()
+            .setSeekableByteChannel(Files.newByteChannel(cimZipFile))
+            .get()) {
 
             Set<String> rdfIdValues = skipExternalRef ? getRdfIdValues(zipFileData) : null;
 
